--- a/index.css
+++ b/index.css
@@ -386,7 +386,7 @@ opacity: 80%;
 }
 .reserveseat{
     background-color: rgb(49, 46, 46);
-    padding: 5px;
+    padding: 10px;
     text-decoration: none;
     font-size: 120%;
     /* margin-top: 30px;  */
@@ -400,4 +400,127 @@ opacity: 80%;
 .reserveseat:active{
     color: rgb(138, 57, 57);
     background-color: rgb(46, 44, 44);
+}
+
+/* footer */
+/* body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Arial', sans-serif;
+} */
+
+footer {
+    background-color: #333;
+    color: #a8a3a3;
+    height: auto;
+    padding: 20px;
+    text-align: center;
+    font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.footer-info {
+    width: 100%;
+    display: flex;
+    /* height: auto; */
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.quick-links{
+    width: 33%;
+    text-align: left;
+    /* margin-top: 120px; */
+    margin-left: 10px;
+    /* background-color: red; */
+}
+
+.footerheading{
+    font-size: 140%;
+}
+/* .quick-links, .social-media{
+    /* margin-top: 50px; */
+/* } */ */
+.footernav{
+    list-style: none;
+    font-size: 150%;
+    text-align: left;
+    /* margin-top: 90px; */
+    /* text-decoration: none; */
+}
+.social-media{
+    /* background-color: yellow; */
+    height: 60%;
+    /* margin-top: 120px; */
+}
+.footernav li{
+    list-style: none;
+}
+.footernav li a, .footernav a {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    /* text-align: center; */
+    font-size: 110%;
+    margin-left: -35px;
+    /* list-style: none; */
+}
+.footernav li a:hover, .footernav a:hover{
+    color: grey;
+}
+.footernav li a:active, .footernav a:active{
+    color: rgb(0, 0, 0);
+}
+
+.quick-links, .newsletter-section, .social-media{
+    width: 33%;
+}
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+}
+
+.newsletter-section {
+    max-width: 600px;
+    /* margin-top:120px; */
+    /* margin: 0 auto; */
+    height: 100px;
+    font-size: 100%;
+    /* background-color: green; */
+}
+
+.newsletter-section h3 {
+    color: #fff;
+    margin-bottom: 10px;
+}
+
+#newsletter-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+input[type="email"] {
+    padding: 10px;
+    width: 70%;
+    margin-right: 10px;
+}
+
+button {
+    padding: 10px;
+    background-color: #fff;
+    color: #333;
+    border: none;
+    cursor: pointer;
+}
+button:hover{
+    color: white;
+    background-color: rgb(41, 38, 38);
+}
+button:active{
+    color: rgb(128, 85, 85);
+    background-color: rgb(192, 184, 188);
+}
+.contact-info{
+    margin-top: -50px;
 }
