--- a/index.css
+++ b/index.css
@@ -133,14 +133,17 @@ nav ul {
     border-radius: 70px;
     padding-left: 10px;
     padding-right: 10px;
-    font-size: 80%;
+    font-size: 60%;
     border: 30px;
     border-color: rgb(43, 160, 206);
     font-family: "Poppins", "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     text-align: center;
     transition: all 0.2s ease-in-out;
 }
-
+.booking h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 5px;
+}
 .images {
     width: 300px;
     height: 360px;
