--- a/index.css
+++ b/index.css
@@ -412,88 +412,76 @@ opacity: 80%;
     font-family: 'Arial', sans-serif;
 } */
 
+/* Footer Styles */
+/* Footer Styles */
 footer {
     background-color: #333;
-    color: #a8a3a3;
-    height: auto;
-    padding: 20px;
+    color: #fff;
+    padding: 30px;
     text-align: center;
-    font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .footer-info {
     width: 100%;
     display: flex;
-    /* height: auto; */
     justify-content: space-around;
     flex-wrap: wrap;
 }
 
-.quick-links{
+.quick-links, .newsletter-section, .social-media {
     width: 33%;
-    text-align: left;
-    /* margin-top: 120px; */
-    margin-left: 10px;
-    /* background-color: red; */
 }
 
-.footerheading{
+.quick-links {
+    text-align: center; /* Center align quick links */
+    margin-left: 0; /* Reset margin */
+}
+
+.footerheading {
     font-size: 140%;
+    text-align: center; /* Center align heading */
 }
-/* .quick-links, .social-media{
-    /* margin-top: 50px; */
-/* } */ */
-.footernav{
+
+.footernav {
     list-style: none;
-    font-size: 150%;
+    font-size: 120%;
+    margin-left: -90px;
     text-align: left;
-    /* margin-top: 90px; */
-    /* text-decoration: none; */
+    margin-left: 100px;
 }
-.social-media{
-    /* background-color: yellow; */
-    height: 60%;
-    /* margin-top: 120px; */
+
+.footernav li a{
+    margin-bottom: 8px; /* Add margin between list items */
+    margin-left: 15px;
 }
-.footernav li{
-    list-style: none;
-}
-.footernav li a, .footernav a {
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    /* text-align: center; */
-    font-size: 110%;
-    margin-left: -35px;
-    /* list-style: none; */
+.footernav li a, .footernav a{
+    font-size: 85%;
 }
 .footernav li a:hover, .footernav a:hover{
-    color: grey;
+    text-decoration: none;
+    color: rgb(156, 151, 151);
 }
 .footernav li a:active, .footernav a:active{
-    color: rgb(0, 0, 0);
+    text-decoration: none;
+    color: rgb(121, 51, 51);
+}
+.footernav li a, .footernav a{
+    text-decoration: none;
+    color: white;
 }
 
-.quick-links, .newsletter-section, .social-media{
-    width: 33%;
-}
-footer {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
+.social-media {
+    text-align: right; /* Right align social media section */
 }
 
 .newsletter-section {
     max-width: 600px;
-    /* margin-top:120px; */
-    /* margin: 0 auto; */
     height: 100px;
     font-size: 100%;
-    /* background-color: green; */
 }
 
 .newsletter-section h3 {
-    color: #fff;
+    text-align: center; /* Center align newsletter heading */
     margin-bottom: 10px;
 }
 
@@ -517,13 +505,14 @@ button {
     cursor: pointer;
 }
 button:hover{
+    background-color: black;
     color: white;
-    background-color: rgb(41, 38, 38);
 }
 button:active{
-    color: rgb(128, 85, 85);
-    background-color: rgb(192, 184, 188);
+    background-color: rgb(124, 121, 121);
+    color: rgb(163, 0, 0);
 }
-.contact-info{
+
+.contact-info {
     margin-top: -50px;
 }
